Fix for design on small devices

--- a/cahee/css/styles_cahee_header.css
+++ b/cahee/css/styles_cahee_header.css
@@ -17,7 +17,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   z-index: 1;
 }
 
@@ -93,10 +93,6 @@
 }
 
 @media screen and (max-width: 767px) {
-  .header {
-    position: fixed;
-  }
-
   #nav-container {
     width: 100%;
     height: 100vh;
@@ -111,9 +107,9 @@
     display: block;
     background-color: white;
     position: absolute;
-    top: -50px;
-    left: -50px;
-    padding: 80px 100px 50px;
+    top: -75px;
+    left: -75px;
+    padding: 150px 200px 100px;
     border-radius: 50%;
     box-shadow: 0px 0px 8px 10px #888888;
   }
@@ -157,12 +153,12 @@
   }
 
   #nav-content {
-    margin-top: 10%;
+    margin-top: 150px;
     width: 60%;
     position: absolute;
     top: 10%;
     padding-top: 10%;
-    height: 90%;
+    height: calc(100% - 150px - 10%);
     background: white;
     pointer-events: auto;
     transform: translateX(-100%);
